# RNAliHeliCes

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
autom4te.cache/: output.1  requests  traces.0  traces.1
examples/: Makefile  Makefile.am  Makefile.in  test2.aln  test2.ss  test3.aln  test3.ss  test4.ss
examples/RNAliHiKinetics_datasets/: files_to_be_processed.txt  its2_saccharomycetales.aln  t-box.aln  thiC_riboswitch_Prochloros.aln  trp_attenuator.aln  xbox.aln
examples/RNAlishapes_example_alignments/: Rfam_tbox_seed.aln  spliced_leader.aln  tRNA_4.aln  thi_riboswitch.aln
gaps_c/: probs_m_microstate.cc  probs_m_microstate.d  probs_m_microstate.hh  probs_m_microstate.mf  probs_m_microstate_main.cc  probs_m_microstate_main.d  string.d
gaps_c/.hg/: dirstate  hgrc
gaps_c/.hg/cache/: branchheads  tags
gaps_c/.hg/store/: 00changelog.i  00manifest.i  fncache
gaps_c/.hg/store/data/: _r_e_a_d_m_e.txt.i  ali__macrostate.gap.i  ali__microstate.gap.i  ali__nodangle.gap.i  ali__outside__microstate.gap.i  ali__outside__nodangle.gap.i  ali__outside__overdangle.gap.i  ali__overdangle.gap.i  alifold.hh.i  base_pair_prob__errors.ods.i  canonicals.gap.i  description.html.i  description.odt.d  description.odt.i  description.xml.i  eval__ali__macrostate.gap.i  eval__ali__microstate.gap.i  eval__ali__nodangle.gap.i  eval__ali__overdangle.gap.i  eval__macrostate.gap.i  eval__microstate.gap.i  eval__nodangle.gap.i  eval__nodangle2.gap.i  eval__overdangle.gap.i  eval__p_kiss.gap.i  find_truth.pl.i  fold-grammars.xsd.i  jens.gap.i  locomotif.gap.i  macrostate.gap.i  macrostate_center.gap.i  macrostates.gap.i  makefile.i  (+66 more)
gaps_c/Algebras/DotBracket/: alg_outside_dotBracket.gap
gaps_c/Algebras/Shapes/: README__  alg_ali_hishapes.gap  hishapes.gap  hishapes_lm_nolp.gap
gaps_c/Grammars/: gra_pknot_microstate.gap.original
gaps_c/Misc/Applications/: probs_m_microstate.diff
gaps_c/Misc/Applications/RNAalihishapes-1.0/src/ViennaRNA-2.1.1/Progs/: Makefile.am  Makefile.in  Pathfinder  Pathfinder.c  RF00500_seed.pre.res  RF00500_seed.pre.res_b  RF00500_seed.res  RNAalieval  RNAalieval.c_corrupt  RNAalieval_2.c  RNAalieval_3.c  RNAalieval_4.c  RNAalieval_5.c  RNAalieval_milestone_4.c  RNAalifold  RNAalifold_cmdl.c  alidot.ps  alifold.out  alirna.ps  aln.ps  test.aln  test.cons_stru  test.cons_stru2  test.s2t  test2.struc  test2.struc_  test3.aln  test3.struc
gaps_c/Misc/Applications/RNAalihishapes-1.0/src/ViennaRNA-2.1.1/Progs/.deps/: Pathfinder.Po  RNA2Dfold.Po  RNA2Dfold_cmdl.Po  RNAalieval.Po  RNAalifold.Po  RNAalifold_cmdl.Po
gaps_c/Misc/Applications/RNAalihishapes-1.0/src/ViennaRNA-2.1.1/Progs/librna/: Makefile.in  energy_par.lo  librna.la  params.lo  rnalib.c  utils.lo
gaps_c/Misc/Applications/RNAalihishapes-1.0/src/ViennaRNA-2.1.1/Progs/librna/.deps/: energy_par.Plo  fold_vars.Plo  params.Plo  read_epars.Plo  rnalib.Plo  utils.Plo
gaps_c/Misc/Applications/RNAalihishapes-1.0/src/ViennaRNA-2.1.1/Progs/librna/vienna/: read_epars.pio  utils.pio
gaps_c/Misc/Applications/RNAalihishapes-1.1/RNAalihishapes-1.0_option_without_string_o/src/: Makefile.am  Makefile.in  filter_add.hh  pfall_microstate.cc  probs_a_microstate.cc  probs_a_microstate.hh  probs_hplus_microstate.cc  probs_m_microstate.hh
gaps_c/Misc/Applications/RNAalihishapes-1.1/RNAalihishapes-1.0_option_without_string_o/src/rtlib/: Makefile.am  Makefile.in
gaps_c/Misc/Applications/RNAalihishapes-1.1/src/librna____/: Makefile.am  Makefile.in  Makefile_dist
gaps_c/Misc/Applications/RNAalihishapes-1.1/src/librna____/.deps/: librna_la-energy_par.Plo  librna_la-fold_vars.Plo  librna_la-params.Plo
gaps_c/Misc/Applications/RNAalihishapes-1.1/src/librna____/vienna/: utils.pio
src/: LibChangeLog  Makefile  Makefile.am  Makefile.in  RNAalihipath  RNAalihishapes  config.h  config.h.in  config.h.in~  eval_microstate.cc  eval_microstate.hh  pfall_microstate.cc  pfall_microstate.hh  probs_a_microstate.cc  probs_a_microstate.hh  probs_h_microstate.cc  probs_h_microstate.hh  probs_hplus_microstate.cc  probs_hplus_microstate.hh  probs_m_microstate.cc  probs_m_microstate.hh  rep_consensus.cc  rep_consensus.hh  rnaalihipath.cc  rnaalihishapes.cc
src/.deps/: RNAalihipath-eval_microstate.Po  RNAalihipath-probs_a_microstate.Po  RNAalihipath-probs_h_microstate.Po  RNAalihipath-probs_hplus_microstate.Po  RNAalihipath-probs_m_microstate.Po  RNAalihipath-rnaalihipath.Po  RNAalihipath-string.Po  RNAalihishapes-pfall_microstate.Po  RNAalihishapes-probs_a_microstate.Po  RNAalihishapes-probs_h_microstate.Po  RNAalihishapes-probs_hplus_microstate.Po  RNAalihishapes-probs_m_microstate.Po  RNAalihishapes-rep_consensus.Po  RNAalihishapes-rnaalihishapes.Po  RNAalihishapes-string.Po
src/Extensions/: alifold.hh  evalfold.hh  rnaoptions.hh
src/H/: Makefile  Makefile.am  Makefile.in  alifold.h
src/lib/: Makefile  Makefile.am  Makefile.in  PS_dot.c  alifold.c
src/lib/.deps/: libRNA_a-2Dfold.Po  libRNA_a-2Dpfold.Po  libRNA_a-LPfold.Po  libRNA_a-Lfold.Po  libRNA_a-MEA.Po  libRNA_a-PS_dot.Po  libRNA_a-ProfileAln.Po  libRNA_a-ProfileDist.Po  libRNA_a-RNAstruct.Po  libRNA_a-aliLfold.Po  libRNA_a-ali_plex.Po  libRNA_a-alifold.Po  libRNA_a-alipfold.Po  libRNA_a-aln_util.Po  libRNA_a-c_plex.Po  libRNA_a-cofold.Po  libRNA_a-convert_epars.Po  libRNA_a-duplex.Po  libRNA_a-energy_par.Po  libRNA_a-fold.Po  libRNA_a-fold_vars.Po  libRNA_a-gquad.Po  libRNA_a-inverse.Po  libRNA_a-list.Po  libRNA_a-mm.Po  libRNA_a-move_set.Po  libRNA_a-naview.Po  libRNA_a-params.Po  libRNA_a-part_func.Po  libRNA_a-part_func_co.Po  libRNA_a-part_func_up.Po  libRNA_a-plex.Po  libRNA_a-plex_functions.Po  libRNA_a-plot_layouts.Po  libRNA_a-read_epars.Po  libRNA_a-ribo.Po  libRNA_a-snofold.Po  libRNA_a-snoop.Po  libRNA_a-stringdist.Po  libRNA_a-subopt.Po  (+2 more)
src/librna/: Makefile  Makefile.am  Makefile.in  read_epars.lo  rnalib.lo
src/librna/.deps/: energy_par.Plo  fold_vars.Plo  params.Plo  read_epars.Plo  rnalib.Plo  utils.Plo
src/librna/.libs/: librna.so.4.0.0
src/rtlib/: rna.hh  rules.hh
(+1317 files in other folders)
