lib_LTLIBRARIES = rtlib.la
# generic_main.cc 
rtlib_la_SOURCES = adp.hh          bigint.hh   erase.hh         hashlist.hh    output.hh     ref.hh    sample.hh      string.cc       table.hh \
                   algebra.hh      bitops.hh   filter.hh        hash_stats.hh  pool.hh       rna.hh    sequence.hh    string.hh       terminal.hh \
                   asymptotics.hh  cm_alph.hh  hashtng.hh     map_pool.hh   push_back.hh  rope.hh   shape_alph.hh     treelist.hh \
                   backtrack.hh    cstr.h      generic_opts.hh  list.hh        move.hh       range.hh      shape.hh       subopt.hh       vector_sparse.hh \
                   bench.hh        empty.hh    hash.hh          multipool.hh  rational.hh   rules.hh  singleton.hh   subsequence.hh
rtlib_la_LDFLAGS = -module -avoid-version
